--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Temporizador
+application.vendor=Lucas
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,8 +31,9 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Temporizador.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.Atxy2k.jar=lib\\Atxy2k.jar
+file.reference.Atxy2k.jar=lib/Atxy2k.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -56,6 +58,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -64,6 +67,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=Temporizador
 main.class=br.com.view.VIEWtemporizador
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
